fix overflow on contacts

--- a/src/css/chat.css
+++ b/src/css/chat.css
@@ -255,7 +255,7 @@
     flex-direction: row;
     align-items: center;
     border-bottom: 1px solid #8C8C8C;
-    height: 85px;
+    padding:18px;
 
 }
 
